[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/UI/CommonComponents/ChangeSceneButton.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture2D" id=2]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "selected"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.5, 1 ),
"transitions": PackedFloat32Array( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.05, 1.05 ), Vector2( 1, 1 ) ]
}

[node name="ChangeSceneButton" type="Button"]
offset_right = 64.0
offset_bottom = 64.0
custom_minimum_size = Vector2( 64, 64 )
pivot_offset = Vector2( 32, 32 )
icon = ExtResource( 2 )
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/selected = SubResource( 2 )

[connection signal="button_up" from="." to="." method="_on_ChangeSceneButton_button_up"]
[connection signal="mouse_entered" from="." to="." method="_on_ChangeSceneButton_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_ChangeSceneButton_mouse_exited"]
